Fix the alignment of the page

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ html {
 
 h1 {
   font-family: sans-serif;
-  font-weight: normal
+  font: PT Sans;
+  color: #3f1622;
 }
 
 i {
